--- a/index.html
+++ b/index.html
@@ -23,22 +23,14 @@
     <div class="header">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-xl-2 col-lg-3 col-md-6 col-sm-6">
+                <div class="col-xl-6 col-lg-6 col-md-4 col-sm-6">
                     <img src="img/logo.png" alt="logo" class="logo" width="300" height="50"
                         style="object-fit: scale-down">
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 text-center ">
-                    <select class="form-select" aria-label="Default select example">
-                        <option class="header-text header-menu-size" selected>Сервисные центры:</option>
-                        <option value="1">Юбилейный проспект 36</option>
-                        <option value="2">Маяковского 14</option>
-                        <option value="3">Панфилова 1</option>
-                      </select>
-                </div>
-                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 text-center">
+                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 text-center">
                     <p class="header-text">г. Химки, улица Юбилейный проспект 36</p>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
                     <div class="row header-list-call">
                         <a href="tel:+79999999999" class="header-phone">+7 (999) 234-59-93</a>
                         <p>Режим работы: c 9:00 по 22:00</p>
@@ -62,23 +54,21 @@
                     <div class="col-xl-6  col-md-6 col-sm-5 form-bg text-uppercase">
                         <h2>Сервисный центр<br>
                             по ремонту смартфонов</h1>
-                            <img src="img/phone.png" alt="photos" class="phone" width="270" height="300">
-
-                            <ul class="form-items">
-                                <li class="form-item">Ремонт за 90 минут</li>
-                                <li class="form-item">Гарантия до 3-х лет</li>
-                                <li class="form-item">Скидка 30% при заказе на сайте</li>
-                                <li class="form-item">Бесплатный выезд курьера</li>
-                            </ul>
-                    </div>
-                    <div class="col-xl-6  col-md-6 col-sm-7 text-center">
-                        <h3 class="form-send">Отправьте заявку сейчас</h3>
+                        <ul class="form-items">
+                            <li class="form-item">Ремонт за 90 минут</li>
+                            <li class="form-item">Гарантия до 3-х лет</li>
+                            <li class="form-item">Скидка 30% при заказе на сайте</li>
+                            <li class="form-item">Бесплатный выезд курьера</li>
+                        </ul>
                         <form action="send.php" method="post" class="g-3">                            
                             <input type="text" placeholder="+7 (777) 777-77-77" name="tel" required><br>
                             <input type="text" name="fio" placeholder="Укажите Имя" required><br>
                             <input type="text" name="email" placeholder="Укажите e-mail" required><br>
                             <input type="submit" value="Отправить">
                         </form>
+                    </div>
+                    <div class="col-xl-6  col-md-6 col-sm-7 text-center">
+                        <div class="form-image"><img src="./img/wing.png" alt="phone" height="540" width="748"></div>
                     </div>
                 </div>
                 
