--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <div class="header">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-xl-6 col-lg-6 col-md-4 col-sm-6">
+                <div class="col-xl-6 col-lg-6 col-md-4 col-sm-4 header-first">
                     <img src="img/logo.png" alt="logo" class="logo" width="300" height="50"
                         style="object-fit: scale-down">
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 text-center">
+                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-12 text-center header-third">
                     <p class="header-text">г. Химки, улица Юбилейный проспект 36</p>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
+                <div class="col-xl-3 col-lg-3 col-md-4 col-sm-8">
                     <div class="row header-list-call">
                         <a href="tel:+79999999999" class="header-phone">+7 (999) 234-59-93</a>
                         <p>Режим работы: c 9:00 по 22:00</p>
@@ -50,20 +50,18 @@
     <section class="form-wrapper">
         <div class="form">
             <div class="container">
-                <div class="row text-center">
+                <div class="row text-left">
                     <div class="col-xl-6  col-md-6 col-sm-5 form-bg text-uppercase">
-                        <h2>Сервисный центр<br>
+                        <h1>Сервисный центр
                             по ремонту смартфонов</h1>
-                        <ul class="form-items">
+                        <ul class="form-list">
                             <li class="form-item">Ремонт за 90 минут</li>
                             <li class="form-item">Гарантия до 3-х лет</li>
                             <li class="form-item">Скидка 30% при заказе на сайте</li>
                             <li class="form-item">Бесплатный выезд курьера</li>
                         </ul>
                         <form action="send.php" method="post" class="g-3">                            
-                            <input type="text" placeholder="+7 (777) 777-77-77" name="tel" required><br>
-                            <input type="text" name="fio" placeholder="Укажите Имя" required><br>
-                            <input type="text" name="email" placeholder="Укажите e-mail" required><br>
+                            <input type="text" placeholder="7(999)777-88-77" name="tel" required><br>
                             <input type="submit" value="Отправить">
                         </form>
                     </div>
@@ -88,36 +86,30 @@
                         <img src="img/i (1).webp" class="card-img-top" alt="diagnostic" height="150">
                         <div class="card-body">
                             <h5 class="card-title">Диагностика</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">Выявление повреждения устройства с помощью профессионального оборудования</p>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <img src="img/repair.jpg" class="card-img-top" alt="repair" height="150">
                         <div class="card-body">
-                            <h5 class="card-title">Настройка</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Время</h5>
+                            <p class="card-text">Ремонт за ~10 минут с фирменной
+                                гарантией на комплектующие</p>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <img src="img/chat.png" class="card-img-top" alt="chat" height="150">
                         <div class="card-body">
-                            <h5 class="card-title">Замена аккумулятора</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Гарантия на услуги</h5>
+                            <p class="card-text">Фирменная гарантия на комплектующие
+                                запчасти до 3-х лет</p>
                         </div>
                     </div>
                     <div class="card" style="width: 18rem;">
                         <img src="img/computer.jpg" class="card-img-top" alt="computer" height="150">
                         <div class="card-body">
                             <h5 class="card-title">Замена дисплея</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">Замена дисплея быстро и качественно</p>
                         </div>
                     </div>
                 </div>
