--- a/index.html
+++ b/index.html
@@ -75,46 +75,58 @@
 
 
     </section>
-    <!-- Услуга -->
-    <section class="serve">
+    <!-- Таблица -->
+    <section class="price-table">
         <div class="container">
             <div class="row">
-                <h2 class="text-center">Услуги</h2>
-                <div class="row">
-                    
-                    <div class="card" style="width: 18rem;">
-                        <img src="img/i (1).webp" class="card-img-top" alt="diagnostic" height="150">
-                        <div class="card-body">
-                            <h5 class="card-title">Диагностика</h5>
-                            <p class="card-text">Выявление повреждения устройства с помощью профессионального оборудования</p>
-                        </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img src="img/repair.jpg" class="card-img-top" alt="repair" height="150">
-                        <div class="card-body">
-                            <h5 class="card-title">Время</h5>
-                            <p class="card-text">Ремонт за ~10 минут с фирменной
-                                гарантией на комплектующие</p>
-                        </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img src="img/chat.png" class="card-img-top" alt="chat" height="150">
-                        <div class="card-body">
-                            <h5 class="card-title">Гарантия на услуги</h5>
-                            <p class="card-text">Фирменная гарантия на комплектующие
-                                запчасти до 3-х лет</p>
-                        </div>
-                    </div>
-                    <div class="card" style="width: 18rem;">
-                        <img src="img/computer.jpg" class="card-img-top" alt="computer" height="150">
-                        <div class="card-body">
-                            <h5 class="card-title">Замена дисплея</h5>
-                            <p class="card-text">Замена дисплея быстро и качественно</p>
-                        </div>
-                    </div>
+                <div class="col-12">
+                    <table class="table ">
+                        <thead>
+                          <tr class="table-primary">
+                            <th scope="col">№</th>
+                            <th scope="col">Вид работы</th>
+                            <th scope="col">Стоимость, руб</th>
+                            <th class="price-table-hidden" scope="col">Примечание</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row">1</th>
+                            <td>Диагностика</td>
+                            <td>от 150 до 200</td>
+                            <td class="price-table-hidden">...</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">2</th>
+                            <td>Диагностика Apple</td>
+                            <td>от 400</td>
+                            <td class="price-table-hidden">...</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">3</th>
+                            <td>Замена дисплея</td>
+                            <td>от 800</td>
+                            <td class="price-table-hidden">...</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">4</th>
+                            <td >Замена микрофона</td>
+                            <td>от 500</td>
+                            <td class="price-table-hidden">...</td>
+                          </tr>
+                          <tr>
+                            <th scope="row">5</th>
+                            <td>Разборка/сборка телефона</td>
+                            <td>от 350</td>
+                            <td class="price-table-hidden">...</td>
+                          </tr>
+                        </tbody>
+                      </table>
                 </div>
             </div>
+        </div>
     </section>
+    
     <!-- Шаги -->
     <section class="steps">
 
