--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <table class="table ">
+                    <table class="table table-hover table-sm">
                         <thead>
                           <tr class="table-primary">
                             <th scope="col">№</th>
