--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="container">
             <div class="row">
                 <div class="row">
-                    <div class="card text-black bg-light mb-3" style="width: 18rem;">
+                    <div class="card text-black bg-light mt-3 mb-3" style="width: 18rem;">
                         <img src="img/diagnostic.jpg" class="card-img-top rounded" alt="diagnostic" height="150">
                         <div class="card-body">
                             <h5 class="card-title">Диагностика</h5>
@@ -223,7 +223,7 @@
                             <p class="card-text">Аксессуары по выгодным ценам.</p>
                         </div>
                     </div>
-                    <div class="card text-black bg-light" style="width: 18rem;">
+                    <div class="card text-black bg-light mb-3" style="width: 18rem;">
                         <img src="img/wrapper.jpg.crdownload" class="card-img-top rounded" alt="computer" height="150">
                         <div class="card-body">
                             <h5 class="card-title">Чехлы для телефонов</h5>
