--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-4 col-sm-8">
                     <div class="row header-list-call">
-                        <a href="tel:+79999999999" class="header-phone">+7 (999) 234-59-93</a>
-                        <p class="header-text-disabled">Режим работы: c 9:00 по 22:00</p>
+                        <a href="tel:+79662713333" class="header-phone">+7 (966) 271-33-33</a>
+                        <p class="header-text-disabled">Режим работы: c 10:00 по 21:00</p>
                     </div>
 
                 </div>
@@ -41,7 +41,7 @@
 
         </div>
         <div class="call">
-            <a href="https://wa.me/79220054119" target="_blank" title="Написать в Whatsapp" rel="noopener noreferrer">
+            <a href="https://wa.me/79662713333" target="_blank" title="Написать в Whatsapp" rel="noopener noreferrer">
                 <div class="whatsapp-button"><i class="fa fa-whatsapp"></i></div>
             </a>
         </div>
@@ -174,7 +174,7 @@
         <div class="container">
             <div class="row">
                 <div class="row">
-                    <div class="card text-black bg-light mt-3 mb-3" style="width: 18rem;">
+                    <div class="card text-black bg-light mb-3" style="width: 18rem;">
                         <img src="img/diagnostic.jpg" class="card-img-top rounded" alt="diagnostic" height="150">
                         <div class="card-body">
                             <h5 class="card-title">Диагностика</h5>
@@ -223,7 +223,7 @@
                             <p class="card-text">Аксессуары по выгодным ценам.</p>
                         </div>
                     </div>
-                    <div class="card text-black bg-light mb-3" style="width: 18rem;">
+                    <div class="card text-black bg-light" style="width: 18rem;">
                         <img src="img/wrapper.jpg.crdownload" class="card-img-top rounded" alt="computer" height="150">
                         <div class="card-body">
                             <h5 class="card-title">Чехлы для телефонов</h5>
