--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <p class="fw-bold">Записаться на ремонт:</p>
                     <p>+ 7 (966) 271-33-33</p>
                     <p class="fw-bold">Адреса</p>
-                    <p>Юбилейный, 36</p>
+                    <p>г Химки, Юбилейный проспект, 36</p>
                     <p class="fw-bold">График работы:</p>
                     <p>Пн-сб 10:00-21:00</p>
                 </div>
