--- a/index.html
+++ b/index.html
@@ -174,28 +174,28 @@
         <div class="container">
             <div class="row">
                 <div class="row">
-                    <div class="card text-black bg-light mb-3" style="width: 18rem;">
+                    <div class="card text-black bg-light mt-3 mb-3" style="width: 18rem;">
                         <img src="img/diagnostic.jpg" class="card-img-top rounded" alt="diagnostic" height="150">
                         <div class="card-body">
                             <h5 class="card-title">Диагностика</h5>
                             <p class="card-text">Выявляем неполадки и повреждения устройства</p>
                         </div>
                     </div>
-                    <div class="card text-black bg-light mb-3" style="width: 18rem;">
+                    <div class="card text-black bg-light mt-3 mb-3" style="width: 18rem;">
                         <img src="img/edit-iphone.jpg" class="card-img-top rounded" alt="repair" height="150">
                         <div class="card-body">
                             <h5 class="card-title">Настройка</h5>
                             <p class="card-text">Настройка телефона и приложений.</p>
                         </div>
                     </div>
-                    <div class="card text-black bg-light mb-3" style="width: 18rem;">
+                    <div class="card text-black bg-light mt-3 mb-3" style="width: 18rem;">
                         <img src="img/accum.webp" class="card-img-top rounded" alt="chat" height="150">
                         <div class="card-body">
                             <h5 class="card-title">Замена батареи</h5>
                             <p class="card-text">Быстрая и качественная замена батареи.</p>
                         </div>
                     </div>
-                    <div class="card text-black bg-light  mb-3" style="width: 18rem;">
+                    <div class="card text-black bg-light mt-3 mb-3" style="width: 18rem;">
                         <img src="img/display.webp" class="card-img-top rounded" alt="computer" height="150">
                         <div class="card-body">
                             <h5 class="card-title">Замена дисплея</h5>
