add 1 row near form

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <li class="form-item">Скидки и подарки постоянным покупателям</li>
                             <li class="form-item">Бесплатный выезд курьера</li>
                         </ul>
-                        <form action="send.php" method="post" class="g-3">
+                        <form action="php/send.php" method="post" class="g-3">
                             <input type="text" placeholder="7(999)777-88-77" name="tel" required><br>
                             <input type="submit" value="Отправить">
                         </form>
